<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:name="pe.hgs.truler.phase.legacy.FinalResult01"
        android:id="@+id/fragment_fr_result"
        android:layout_weight="22"
        tools:layout="@layout/activity_final_result_01" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/text_fr_comment"
        android:layout_weight="2"
        android:text="@string/app_name"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <Button
            android:text="@string/layout_finalresult_button_summary_basic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_fr_summary_basic"
            android:layout_weight="1"/>

        <Button
            android:text="@string/layout_finalresult_button_summary_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_fr_summary_time"
            android:layout_weight="1"/>

        <Button
            android:text="@string/layout_finalresult_button_upper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_fr_upper"
            android:layout_weight="1"/>

        <Button
            android:text="@string/layout_finalresult_text_button_lower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_fr_lower"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <Button
            android:text="@string/layout_finalresult_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_fr_law"
            android:layout_weight="1"/>

        <Button
            android:text="@string/layout_finalresult_button_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_fr_exercise"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>