<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".phase.TaskInfo">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/tlTI_info_field"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        >

        <TableRow
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_taskinfo_textview_guide_01"
                android:id="@+id/tvTI_guide"
                android:layout_column="0"
                android:textAlignment="center"
                android:layout_span="5"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_taskinfo_textview_param_name_01"
                android:id="@+id/tvTI_param_name_01"
                android:layout_column="0"
                android:textAlignment="center"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etTI_param_01"
                android:layout_span="4"
                android:singleLine="true"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_taskinfo_textview_param_name_02"
                android:id="@+id/tvTI_param_name_02"
                android:layout_column="0"
                android:textAlignment="center"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etTI_param_02"
                android:layout_span="4"
                android:singleLine="true"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_taskinfo_textview_param_name_03"
                android:id="@+id/tvTI_param_name_03"
                android:layout_column="0"
                android:textAlignment="center"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etTI_param_03"
                android:layout_span="4"
                android:singleLine="true"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_taskinfo_textview_param_name_04"
                android:id="@+id/tvTI_param_name_04"
                android:layout_column="0"
                android:textAlignment="center"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etTI_param_04"
                android:layout_span="4"
                android:singleLine="true"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_taskinfo_textview_param_name_05"
                android:id="@+id/tvTI_param_name_05"
                android:layout_column="0"
                android:textAlignment="center"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etTI_param_05"
                android:layout_span="4"
                android:singleLine="true"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_taskinfo_textview_param_name_06"
                android:id="@+id/tvTI_param_name_06"
                android:layout_column="0"
                android:textAlignment="center"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/etTI_param_06"
                android:layout_span="3"
                android:singleLine="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_taskinfo_textview_param_guide_01"
                android:id="@+id/tvTI_param06_guide"
                android:layout_column="0"
                android:textAlignment="center"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_taskinfo_textview_param_name_07"
                android:id="@+id/tvTI_param_name_07"
                android:layout_column="0"
                android:textAlignment="center"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etTI_param_07"
                android:layout_span="4"
                android:singleLine="true"/>
        </TableRow>

    </TableLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_taskinfo_button_next_02"
        android:id="@+id/btTI_next_selection"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_taskinfo_button_next_01"
        android:id="@+id/btTI_next_camera"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/btTI_next_selection"
        android:layout_toStartOf="@+id/btTI_next_selection"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_taskinfo_textview_guide_02"
        android:id="@+id/tvTI_guide_next"
        android:layout_above="@+id/btTI_next_camera"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
