<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <pe.hgs.truler.tools.view.ResultView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_rf_result"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:src="@drawable/tables"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_result_button_law"
            android:id="@+id/button_rf_upper_law"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_result_button_exercise"
            android:id="@+id/button_rf_upper_exercise"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_result_button_upper"
            android:id="@+id/button_rf_status_01"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_result_button_lower"
            android:id="@+id/button_rf_status_02"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>