<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".phase.legacy.analysis.SubAssessment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/txtState"
        android:layout_centerHorizontal="true"
        android:id="@+id/ivContainer"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivSelected"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_text_description_iv01"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivSample"
            android:layout_below="@+id/ivSelected"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_text_description_iv01"
            android:src="@drawable/upper"
            android:layout_weight="1"/>

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_jointrevision_textview_upper"
        android:id="@+id/txtState"
        android:textSize="@dimen/app_size_assessment_state"
        android:layout_above="@+id/button_jr_yes"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_jointrevision_textview_guide_01"
        android:id="@+id/button_jr_yes"
        android:textSize="@dimen/app_size_joint_guide"
        android:layout_above="@+id/btContainter"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btContainter">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_jointrevision_textview_yes"
            android:id="@+id/btYes"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_jointrevision_textview_next"
            android:id="@+id/btNo"/>

    </LinearLayout>



</RelativeLayout>
