<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result_final01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pe.hgs.truler.phase.ResultFinal01">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_rf1_upper"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/upper101"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/text_rf1_upper"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/layout_finalresult_button_upper"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_rf1_upper_risk_guide"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/layout_finalresult_text_guide_01"/>

                <TextView
                    android:id="@+id/text_rf1_upper_risk"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="TextView"
                    android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                android:id="@+id/text_rf1_lower"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/layout_finalresult_button_lower"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_rf1_lower_risk_guide"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/layout_finalresult_text_guide_01"/>

                <TextView
                    android:id="@+id/text_rf1_lower_risk"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="TextView"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <view
        android:id="@+id/result_rf1"
        class="pe.hgs.truler.tools.view.ResultView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:scaleType="matrix"
        android:src="@drawable/tableuv2u"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="7dp"
            android:layout_weight="6"
            app:srcCompat="@drawable/tableuv2g"/>

        <TextView
            android:id="@+id/text_rf1_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_rf1_summary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/colorButtonNormal"
            android:text="@string/layout_finalresult_button_summary_basic"/>

        <Button
            android:id="@+id/button_rf1_summary_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/colorButtonNormal"
            android:text="@string/layout_finalresult_button_summary_time"/>

        <Button
            android:id="@+id/button_rf1_upper"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/colorButtonNormal"
            android:text="@string/layout_finalresult_button_upper"/>

        <Button
            android:id="@+id/button_rf1_lower"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/colorButtonNormal"
            android:text="@string/layout_finalresult_text_button_lower"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_rf1_exercise"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/layout_finalresult_button_exercise"/>


        <Button
            android:id="@+id/button_rf1_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/layout_finalresult_button_save"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>
